# AgentGuard

./: .gitattributes  .gitignore  CITATION.cff  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agentguard/: __init__.py  approval.py  audit.py  audit_replay.py  autonomous_evaluation.py  browser_observation.py  cli.py  detectors.py  evaluation.py  experiment_matrix.py  expression_sandbox.py  external_evaluation.py  gateway.py  mcp_runtime.py  metrics.py  model_config.py  persistent_memory.py  policies.py  provenance.py  registry.py  research_metrics.py  run_manifest.py  sandbox_runtime.py  sandbox_worker.py  schemas.py
agentguard/adapters/: __init__.py  langgraph.py
agentguard/agents/: __init__.py  base.py  demo_agent.py  langgraph_agent.py  security_ops_agent.py
agentguard/attacks/: __init__.py  scenarios.py
agentguard/benchmarks/: __init__.py  autonomous.py  loader.py  splits.py
agentguard/tools/: builtin.py  (+1 more)
configs/: README.md  experiment-matrix.example.json  kimi-code.example.json  openai-compatible.example.json  siliconflow-claude-code.example.json
data/: README.md  autonomous_benchmark_tasks.jsonl  benchmark_tasks.jsonl  tools.json
docs/: README.md  demo.md  experiment_report.md  internship_roadmap.md  quickstart.md  research_guide.md  resume_showcase.md  system_design.md  target_system_and_gap_analysis.md  taxonomy.md
experiments/: README.md
runs/: README.md  agent_attack_audit.jsonl  agent_audit.jsonl  confirm_audit.jsonl  confirm_deny_audit.jsonl  demo_audit.jsonl  security_agent_attack_audit.jsonl  security_agent_audit.jsonl
tests/: README.md  __init__.py  real_model_support.py  test_agent.py  test_autonomous_benchmark.py  test_evaluation.py  test_gateway.py  test_langgraph_adapter.py  test_langgraph_autonomous_agent.py  test_model_config.py  test_real_model_e2e.py
(+252 files in other folders)
