[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Tool-call security evaluation and runtime protection platform for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AgentGuard Contributors" }
]
license = { text = "MIT" }
keywords = ["llm-agent", "security", "tool-use", "prompt-injection", "benchmark"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
langgraph = [
  "langgraph>=1.0.0,<2.0.0",
  "langchain>=1.0.0,<2.0.0",
  "langchain-core>=1.0.0,<2.0.0",
  "pydantic>=2.0,<3.0"
]
openai = [
  "langchain-openai>=1.0.0,<2.0.0"
]

[project.scripts]
agentguard = "agentguard.cli:main"

[tool.setuptools.packages.find]
include = ["agentguard*"]
